--- a/Learning/bootjpa_eg/src/main/resources/application.properties
+++ b/Learning/bootjpa_eg/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+# These are required as its part of configuring the data source.
+spring.datasource.name=test
+spring.datasource.url=jdbc:mysql://localhost:3306/aarav
+spring.datasource.username=root
+spring.datasource.password=password
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL55Dialect
