--- a/Learning/books_restapi/src/main/resources/application.properties
+++ b/Learning/books_restapi/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 
+# These are required as its part of configuring the data source.
+spring.datasource.name=bookApi
+# "aarav" below is the name of the database that we have created.
+spring.datasource.url=jdbc:mysql://localhost:3306/aarav
+
+spring.datasource.username=root
+spring.datasource.password=password
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+# As we got an error while creating a table hence the below is required for autmatic table creation
+spring.jpa.hibernate.ddl-auto=update 
