add additional endpoints to actuator

--- a/test/src/main/resources/application.properties
+++ b/test/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 # changing logging level
 logging.level.org.springframework=info
 # making prod appplication properties as the default
-spring.profiles.active=qa
+spring.profiles.active=dev
 
 currency-service.url=https://www.default.com
 currency-service.username=default_user
 currency-service.key=default_key
+
+# Expose more endpoints in actuator
+management.endpoints.web.exposure.include=*
