add jsp mappping

--- a/todo_webapp/src/main/resources/application.properties
+++ b/todo_webapp/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 # to change the server port from the default value of 8080
 server.port = 8081
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
+
+logging.level.org.springframework=debug
