--- a/todo_webapp/src/main/resources/application.properties
+++ b/todo_webapp/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 
 logging.level.org.springframework=debug
+
+# to provide a standard date format we set it here in the below line
+spring.mvc.format.date=yyyy-MM-dd
